tests/expectations/compiler/structs/struct_with_visibility_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372060]: A struct cannot have a member with mode `constant`, `private`, or `public`.
    --> compiler-test:5:18
     |
   5 |         constant a: u8,
     |                  ^^^^^
Error [ETYC0372060]: A struct cannot have a member with mode `constant`, `private`, or `public`.
    --> compiler-test:6:17
     |
   6 |         private bar: bool,
     |                 ^^^^^^^^^
Error [ETYC0372060]: A struct cannot have a member with mode `constant`, `private`, or `public`.
    --> compiler-test:7:16
     |
   7 |         public bax: u16,
     |                ^^^^^^^^
"""]
